--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="ie.conorcasey.sharido">
 
     <application
+        android:name=".main.MainApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -13,6 +14,12 @@
             android:name=".activities.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/Theme.Sharido.NoActionBar">
+        </activity>
+        <activity
+            android:name=".activities.LoginActivity"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.Sharido.NoActionBar">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
