--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
             android:label="@string/app_name"
             android:theme="@style/Theme.Sharido.NoActionBar">
         </activity>
+
         <activity
             android:name=".activities.LoginActivity"
             android:label="@string/app_name"
@@ -26,6 +27,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
     </application>
 
 </manifest>
